--- a/loglib/build.gradle
+++ b/loglib/build.gradle
@@ -27,5 +27,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'com.github.orhanobut:logger:2.2.0'
+    implementation 'com.github.orhanobut:logger:2.2.0'
 }
